# TextAdventureGame

./: .gitignore  CMakeLists.txt  README.md
buildscripts/: BuildModule.cmake
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  audioengine.cpp  audioengine.h
src/dispatcher/: CMakeLists.txt  dispatcher.cpp  dispatcher.h
src/enemies/: CMakeLists.txt  enemies.cpp  enemies.h  enemymanager.cpp  enemymanager.h  goblin.cpp  goblin.h  goblinenemy.cpp  goblinenemy.h  ienemy.h
src/game/: CMakeLists.txt  game.cpp  game.h
src/global/: CMakeLists.txt  algorithms.h  delete.h  enums.h  igameobject.h  inject.h  ints.h  log.h  random.h  structs.h
src/items/: CMakeLists.txt  appleitem.cpp  appleitem.h  breaditem.cpp  breaditem.h  iitem.h  items.cpp  items.h  lavabucketitem.cpp  lavabucketitem.h  spellpotionitem.cpp  spellpotionitem.h  stubitem.cpp  stubitem.h
src/main/: CMakeLists.txt  main.cpp
src/player/: CMakeLists.txt  player.cpp  player.h
src/room/: CMakeLists.txt  room.cpp  room.h
src/singleton/: CMakeLists.txt  singletonmanager.cpp  singletonmanager.h
src/spells/: CMakeLists.txt  ispell.cpp  ispell.h  killspell.cpp  killspell.h  spells.cpp  spells.h
